--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "filadd-review",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,12 +10,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.14.1",
+    "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "sass": "^1.70.0"
   }
 }
