--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.14.1",
     "next": "14.1.0",
     "react": "^18",
+    "react-countup": "^6.5.0",
     "react-dom": "^18"
   },
   "devDependencies": {
